--- a/src/theme/_variables.scss
+++ b/src/theme/_variables.scss
@@ -1,1 +1,4 @@
 $primary-color: rgb(41, 182, 246);
+$sidenav-width: 116px;
+$sidenav-width-displayed: 735px;
+$sidenav-width-hide: $sidenav-width-displayed - 1px;
