--- a/src/app/components/articles-components/publish/publish.component.scss
+++ b/src/app/components/articles-components/publish/publish.component.scss
@@ -1,6 +1,14 @@
 mat-card {
   max-width: 800px;
   margin: 8px auto;
+  @media (max-width: 916px) {
+    margin-left: 8px;
+    margin-right: 8px;
+  }
+
+  @media (max-width: 735px) {
+    margin: 0;
+  }
 }
 
 mat-card-title {
