--- a/src/app/components/events-components/event-details/event-details.component.scss
+++ b/src/app/components/events-components/event-details/event-details.component.scss
@@ -1,3 +1,23 @@
+@import "../../../../theme/styles";
+
 mat-progress-spinner {
   left: calc(50% - 50px);
+}
+
+mat-card {
+  max-width: 1200px;
+  margin: 8px auto;
+  @media (max-width: 1200px + $sidenav-width) {
+    margin-left: 8px;
+    margin-right: 8px;
+  }
+
+  @media (max-width: $sidenav-width-displayed) {
+    margin: 0;
+  }
+
+  mat-card-content {
+    max-width: 245px;
+    max-height: 350px;
+  }
 }
