FIX MAJEUR de l'upload de fichier via bouton #9
Avoir deux upload de fichier sur la meme page ne rend plus fous les boutons d'upload. Les ids permettant d'utiliser l'upload via un clic sont maintenant générés aléatoirement

Signed-off-by: Lucas OMS <lucas.oms@hotmail.fr>

--- a/src/app/components/articles-components/add-event/add-event.component.html
+++ b/src/app/components/articles-components/add-event/add-event.component.html
@@ -112,7 +112,7 @@
                              [subFolder]="'eventImages'"></app-file-upload>
             <img *ngIf="imageToDisplay !== ''" [src]="imageToDisplay" alt="">
             <app-file-upload (downloadableOn)="headerToDisplay = $event"
-                             (uploadedOnURL)="event.imageUrl = $event"
+                             (uploadedOnURL)="event.imageHeaderUrl = $event"
                              *ngIf="headerToDisplay ===''"
                              [displayedTitle]="'Ajouter une bannière'"
                              [expectedType]="'image'"
