Le planning n'affiche plus que les bannières d'événements #2
Si il y a une bannière, l'affiche n'est pas affiché, c'est la bannière qui s'affiche

Signed-off-by: Lucas OMS <lucas.oms@hotmail.fr>

--- a/src/app/components/events-components/schedule-event-item/schedule-event-item.component.html
+++ b/src/app/components/events-components/schedule-event-item/schedule-event-item.component.html
@@ -1,6 +1,7 @@
 <a [routerLink]="['/event', event.id]">
     <img *ngIf="event.downloadableImageHeaderUrl !== null"
          [src]="event.downloadableImageHeaderUrl" alt="">
-    <img *ngIf="event.downloadableImageUrl !== null" [src]="event.downloadableImageUrl" alt="">
+    <img *ngIf="event.downloadableImageHeaderUrl === null && event.downloadableImageUrl !== null"
+         [src]="event.downloadableImageUrl" alt="">
     <p *ngIf="event.downloadableImageUrl === null && event.downloadableImageHeaderUrl === null">{{event.title}}</p>
 </a>
