--- a/src/app/components/events-components/event-details/event-details.component.scss
+++ b/src/app/components/events-components/event-details/event-details.component.scss
@@ -5,9 +5,9 @@ mat-progress-spinner {
 }
 
 mat-card {
-  max-width: 1200px;
+  max-width: 800px;
   margin: 8px auto;
-  @media (max-width: 1200px + $sidenav-width) {
+  @media (max-width: 800px + $sidenav-width) {
     margin-left: 8px;
     margin-right: 8px;
   }
@@ -17,7 +17,37 @@ mat-card {
   }
 
   mat-card-content {
-    max-width: 245px;
-    max-height: 350px;
+
+
+    img:not(.banner) {
+      max-width: 245px;
+      max-height: 350px;
+      float: left;
+      margin-right: 5px;
+      margin-bottom: 5px;
+    }
+
+    img.banner {
+      max-width: unset;
+    }
+
+    .mainContent {
+      overflow: auto;
+
+      .text {
+        h1 {
+          margin: 0;
+        }
+
+        h2 {
+          font-size: 20px;
+          color: rgba(0, 0, 0, 0.54);
+        }
+
+        p {
+          text-align: justify;
+        }
+      }
+    }
   }
 }
