--- a/src/app/components/events-components/schedule/schedule.component.scss
+++ b/src/app/components/events-components/schedule/schedule.component.scss
@@ -6,52 +6,111 @@
   margin: 8px;
 
   .schedule {
-    display: grid;
-    //grid-template-columns: repeat(7, 1fr);
-    grid-template-columns: repeat(7, calc(100vw / 7 - 22px));
-    grid-template-rows: auto repeat(4, minmax(90px, auto));
-    grid-gap: 1px;
+    &.desktop {
+      display: grid;
+      //grid-template-columns: repeat(7, 1fr);
+      grid-template-columns: repeat(7, calc(100vw / 7 - 22px));
+      grid-template-rows: auto repeat(4, minmax(90px, auto));
+      grid-gap: 1px;
 
-    @media (max-width: 734px) {
-      grid-template-columns: repeat(7, calc(100vw / 7 - 6px));
-    }
-  }
+      @media (max-width: 734px) {
+        grid-template-columns: repeat(7, calc(100vw / 7 - 6px));
+      }
 
-  .header {
-    background-color: var(--primary-color);
-    color: white;
-    text-align: center;
-  }
+      .header {
+        background-color: var(--primary-color);
+        color: white;
+        text-align: center;
+      }
 
-  .day {
-    position: relative;
-    cursor: pointer;
-    min-height: 75px;
+      .day {
+        position: relative;
+        cursor: pointer;
+        min-height: 75px;
 
 
-    &:nth-child(2n) {
-      background: #f1f1f1;
+        &:nth-child(2n) {
+          background: #f1f1f1;
 
-      &:hover {
-        background: #e9e9e9;
+          &:hover {
+            background: #e9e9e9;
+          }
+        }
+
+        &:nth-child(2n+1) {
+          background: #dfdfdf;
+
+          &:hover {
+            background: #d7d7d7;
+          }
+        }
+
+        .number {
+          width: 2em;
+          height: 1em;
+          position: absolute;
+          text-align: center;
+          top: 0;
+          right: 0;
+        }
       }
     }
 
-    &:nth-child(2n+1) {
-      background: #dfdfdf;
-
-      &:hover {
-        background: #d7d7d7;
+    &:not(.desktop) {
+      @media (min-width: 601px) {
+        display: none !important;
       }
-    }
+      display: grid;
+      grid-template-columns: auto 1fr;
+      grid-template-rows: repeat(8, auto);
+      grid-auto-flow: column;
 
-    .number {
-      width: 2em;
-      height: 1em;
-      position: absolute;
-      text-align: center;
-      top: 0;
-      right: 0;
+      .header {
+        background-color: var(--primary-color);
+        color: white;
+        text-align: center;
+      }
+
+      .dayName {
+        $border: solid 1px #dfdfdf;
+
+        padding: 8px 0;
+
+        writing-mode: vertical-rl;
+        text-orientation: sideways;
+        text-align: center;
+        transform: rotate(-180deg);
+        border-right: $border;
+        border-bottom: $border;
+        border-radius: 0 10px 5px 0;
+
+        &:first-of-type {
+          border-top: $border;
+        }
+      }
+
+      .day {
+        position: relative;
+        cursor: pointer;
+        min-height: 75px;
+
+
+        &:nth-child(2n) {
+          background: #f1f1f1;
+
+          &:hover {
+            background: #e9e9e9;
+          }
+        }
+
+        &:nth-child(2n+1) {
+          background: #dfdfdf;
+
+          &:hover {
+            background: #d7d7d7;
+          }
+        }
+      }
     }
   }
 
@@ -67,5 +126,15 @@
       width: 35px;
       height: 35px;
     }
+  }
+
+  @media (max-width: 600px) {
+    margin: 4px 0;
+  }
+}
+
+.desktop {
+  @media (max-width: 600px) {
+    display: none !important;
   }
 }
