Affiche les articles d'un événement #1
Dans les détails de l'événement, les articles liés s'affiche du plus récent ua plus ancien

Signed-off-by: Lucas OMS <lucas.oms@hotmail.fr>

--- a/src/app/components/events-components/event-details/event-details.component.html
+++ b/src/app/components/events-components/event-details/event-details.component.html
@@ -36,5 +36,15 @@
 
     </mat-card-content>
 </mat-card>
+<div *ngIf="event !== null && event !== undefined && articles.length > 0" class="split">
+    <div></div>
+    <h1>Article{{articles.length > 1 ? 's' : ''}}
+        lié{{articles.length > 1 ? 's' : ''}}</h1>
+    <div></div>
+</div>
+<div *ngIf="event !== null && event !== undefined && articles.length > 0">
+    <app-article-view *ngFor="let article of articles" [article]="article">
+    </app-article-view>
+</div>
 <mat-progress-spinner mode="indeterminate"
                       *ngIf="event === null || event === undefined"></mat-progress-spinner>
