--- a/src/app/components/events-components/event-details/event-details.component.scss
+++ b/src/app/components/events-components/event-details/event-details.component.scss
@@ -51,3 +51,26 @@ mat-card {
     }
   }
 }
+
+.split {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: auto;
+  width: 75%;
+  max-width: 600px;
+
+  div {
+    flex: 1;
+    height: 1px;
+    width: 100%;
+    background-color: #dfdfdf;
+  }
+
+  h1 {
+    margin: auto 8px;
+    text-align: center;
+  }
+}
+
+
