Push pré réunion assos Ajout des icons material en local
Signed-off-by: Lucas OMS <lucas.oms@hotmail.fr>

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -205,7 +205,7 @@
                     </a>
                 </div>
             </mat-sidenav>
-            <mat-sidenav-content>
+            <mat-sidenav-content [ngStyle]="getPadding()">
                 <router-outlet></router-outlet>
             </mat-sidenav-content>
         </mat-sidenav-container>
