--- a/src/global.scss
+++ b/src/global.scss
@@ -10,6 +10,7 @@
 @import '~@ionic/angular/css/flex-utils.css';
 @import '~@angular/material/theming';
 @import "bootstrap";
+@import "material-icons";
 /*@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';*/
 //@import '~font-awesome/css/font-awesome.css';
 // Plus imports for other components in your app.
