--- a/src/app/components/events-components/schedule/schedule.component.scss
+++ b/src/app/components/events-components/schedule/schedule.component.scss
@@ -24,10 +24,13 @@
       }
 
       .day {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
         position: relative;
         cursor: pointer;
-        min-height: 75px;
-
+        max-height: 90px;
 
         &:nth-child(2n) {
           background: #f1f1f1;
@@ -52,6 +55,7 @@
           text-align: center;
           top: 0;
           right: 0;
+          opacity: 0.5;
         }
       }
     }
@@ -92,7 +96,8 @@
       .day {
         position: relative;
         cursor: pointer;
-        min-height: 75px;
+        min-height: 90px;
+        max-height: 90px;
 
 
         &:nth-child(2n) {
@@ -110,7 +115,26 @@
             background: #d7d7d7;
           }
         }
+
+        .number {
+          text-align: right;
+          padding-right: 4px;
+          opacity: 0.5;
+        }
       }
+
+    }
+
+    .shadowSeeMore {
+      position: absolute;
+      top: 80px;
+      width: 100%;
+      height: 10px;
+      background-image: linear-gradient(to top, #e1e1e1, transparent);
+    }
+
+    .day:hover .shadowSeeMore {
+      display: none;
     }
   }
 
@@ -126,6 +150,10 @@
       width: 35px;
       height: 35px;
     }
+  }
+
+  .event {
+    width: 100%;
   }
 
   @media (max-width: 600px) {
